force-app/main/default/objects/Report_Setting_Configuration__c/Report_Setting_Configuration__c.object-meta.xml
<CustomObject>
    <label>Report Setting Configuration</label>
    <nameField>
        <displayFormat>RSC-{0000}</displayFormat>
        <label>Report Setting Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Setting Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>