force-app/main/default/objects/Report_Setting_Configuration__c/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <label>Additional Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>