force-app/main/default/objects/Report_Setting_Configuration__c/fields/Email_BCC__c.field-meta.xml
<CustomField>
    <fullName>Email_BCC__c</fullName>
    <label>Email BCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>