force-app/main/default/objects/Report_Setting_Configuration__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <label>Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>