force-app/main/default/objects/Report_Setting_Configuration__c/fields/Email_Template_Folder__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Folder__c</fullName>
    <label>Selected Email Template Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>