force-app/main/default/objects/Report_Setting_Configuration__c/fields/Enter_Time_Value__c.field-meta.xml
<CustomField>
    <fullName>Enter_Time_Value__c</fullName>
    <label>Enter Time Value</label>
    <type>Time</type>
</CustomField>