force-app/main/default/objects/Report_Setting_Configuration__c/fields/Lightning_Email_Template_Folder__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Email_Template_Folder__c</fullName>
    <label>Lightning Email Template Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>