force-app/main/default/objects/Report_Setting_Configuration__c/fields/Recipient_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email_Addresses__c</fullName>
    <label>Recipient Email Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>