force-app/main/default/objects/Report_Setting_Configuration__c/fields/Scheduled_Day__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Day__c</fullName>
    <label>Scheduled Day(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUNDAY</fullName>
            </value>
            <value>
                <fullName>MONDAY</fullName>
            </value>
            <value>
                <fullName>TUESDAY</fullName>
            </value>
            <value>
                <fullName>WEDNESDAY</fullName>
            </value>
            <value>
                <fullName>THURSDAY</fullName>
            </value>
            <value>
                <fullName>FRIDAY</fullName>
            </value>
            <value>
                <fullName>SATURDAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>