force-app/main/default/objects/Report_Setting_Configuration__c/fields/Scheduled_Email_Data__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Email_Data__c</fullName>
    <label>Scheduled Email Data</label>
    <length>254</length>
    <type>Text</type>
</CustomField>