force-app/main/default/objects/Report_Setting_Configuration__c/fields/Scheduled_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Type__c</fullName>
    <label>Scheduled Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>