force-app/main/default/objects/Report_Setting_Configuration__c/fields/Send_Type__c.field-meta.xml
<CustomField>
    <fullName>Send_Type__c</fullName>
    <label>Choose Send Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Now</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>