force-app/main/default/objects/Report_Setting_Configuration__c/fields/Time_Value__c.field-meta.xml
<CustomField>
    <fullName>Time_Value__c</fullName>
    <label>Time Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12:00 am</fullName>
            </value>
            <value>
                <fullName>12:30 am</fullName>
            </value>
            <value>
                <fullName>1:00 am</fullName>
            </value>
            <value>
                <fullName>1:30 am</fullName>
            </value>
            <value>
                <fullName>2:00 am</fullName>
            </value>
            <value>
                <fullName>2:30 am</fullName>
            </value>
            <value>
                <fullName>3:00 am</fullName>
            </value>
            <value>
                <fullName>3:30 am</fullName>
            </value>
            <value>
                <fullName>4:00 am</fullName>
            </value>
            <value>
                <fullName>4:30 am</fullName>
            </value>
            <value>
                <fullName>5:00 am</fullName>
            </value>
            <value>
                <fullName>5:30 am</fullName>
            </value>
            <value>
                <fullName>6:00 am</fullName>
            </value>
            <value>
                <fullName>6:30 am</fullName>
            </value>
            <value>
                <fullName>7:00 am</fullName>
            </value>
            <value>
                <fullName>7:30 am</fullName>
            </value>
            <value>
                <fullName>8:00 am</fullName>
            </value>
            <value>
                <fullName>8:30 am</fullName>
            </value>
            <value>
                <fullName>9:00 am</fullName>
            </value>
            <value>
                <fullName>9:30 am</fullName>
            </value>
            <value>
                <fullName>10:00 am</fullName>
            </value>
            <value>
                <fullName>10:30 am</fullName>
            </value>
            <value>
                <fullName>11:00 am</fullName>
            </value>
            <value>
                <fullName>11:30 am</fullName>
            </value>
            <value>
                <fullName>12:00 pm</fullName>
            </value>
            <value>
                <fullName>12:30 pm</fullName>
            </value>
            <value>
                <fullName>1:00 pm</fullName>
            </value>
            <value>
                <fullName>1:30 pm</fullName>
            </value>
            <value>
                <fullName>2:00 pm</fullName>
            </value>
            <value>
                <fullName>2:30 pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>