force-app/main/default/objects/Report_Setting_Configuration__c/validationRules/Validate_Enter_Time_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Enter_Time_Value</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
  MINUTE(Enter_Time_Value__c) &lt;&gt; 0,
  MINUTE(Enter_Time_Value__c) &lt;&gt; 30
)</errorConditionFormula>
    <errorMessage>select time in 30 minutes interval only</errorMessage>
</ValidationRule>