force-app/main/default/objects/Report_Setting_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Schedule_Type__c</columns>
    <columns>Send_Type__c</columns>
    <columns>Enter_Time_Value__c</columns>
    <columns>Scheduled_Day__c</columns>
    <columns>Scheduled_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>