force-app/main/default/objects/Report_Setting_Configuration__c/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Email_Body__c</columns>
    <columns>Subject__c</columns>
    <columns>Recipient_Email_Addresses__c</columns>
    <columns>Additional_Emails__c</columns>
    <columns>Time_Value__c</columns>
    <columns>Schedule_Date__c</columns>
    <columns>Email_To__c</columns>
    <columns>Send_Type__c</columns>
    <columns>Schedule_Type__c</columns>
    <columns>Scheduled_Day__c</columns>
    <columns>Enter_Time_Value__c</columns>
    <columns>Next_Schedule_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Data</label>
</ListView>